# aiml-glossary

./: .gitignore  .pre-commit-config.yaml  README.txt  dev-requirements.txt  index.html  makefile  pyproject.toml  requirements.txt  semantic_clusters.csv
.github/workflows/: ci.yml  pages.yml
data/: aiml_glossary.json.bak  aiml_glossary_conflicts.json  glossary.schema.json  link_dictionary.json
mlruns/0/: meta.yaml
mlruns/0/8c93eebd07b0422b8d4a129058df0e10/: meta.yaml
mlruns/0/8c93eebd07b0422b8d4a129058df0e10/artifacts/: aiml_glossary.json  cluster_assignments.csv
mlruns/0/8c93eebd07b0422b8d4a129058df0e10/metrics/: avg_degree  largest_cluster_size  modularity  num_clusters
mlruns/0/8c93eebd07b0422b8d4a129058df0e10/tags/: mlflow.runName  mlflow.source.name
mlruns/608711527902205601/: meta.yaml
mlruns/608711527902205601/031796b9260b4275869977e4c8eb43d0/: meta.yaml
mlruns/608711527902205601/12d5d647673541f4b670649f3702c277/: meta.yaml
mlruns/608711527902205601/2a105c44d5364118bd0309ab30ef8b7f/: meta.yaml
mlruns/608711527902205601/38b652e06e0940bb80c5951d72d05ee5/: meta.yaml
notebooks/: glossary_analysis.ipynb  runbook.ipynb
src/: cluster_analysis.py  cluster_terms.py  clustering.py  convert_glossary.py  coverage_report.py  enrich_glossary.py  evaluate_clusters.py  generate_outputs.py  link_dictionary.py  publish_outputs.py  render_templates.py  semantic_clustering.py  utils.py  validate_glossary.py
templates/: glossary.md.j2  glossary.xhtml.j2
tests/: test_cluster_analysis.py  test_validate_glossary.py
(+15 files in other folders)
