[project]
name = "src"
version = "0.1.0"
description = "AIML Glossary project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ian" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
